@@ -18,10 +18,11 @@ import java.util.stream.Stream;
 
 public class App {
     public static void main(String[] args) throws IOException {
-        String path = System.getProperty("user.dir") + "\\src\\main\\resources\\tickets.json";
+        String path = System.getProperty("user.dir") + "/src/main/resources/tickets.json";
         File file = new File(path);
 
-        TypeReference<JsonResponseByTickets<Ticket>> typeRef = new TypeReference<>() {};
+        TypeReference<JsonResponseByTickets<Ticket>> typeRef = new TypeReference<>() {
+        };
         ObjectMapper objectMapper = new ObjectMapper().registerModule(new JavaTimeModule());
         objectMapper.setDateFormat(new SimpleDateFormat());
 
@@ -32,36 +33,35 @@ public class App {
 
         JsonResponseByTickets<Ticket> response = objectMapper.readValue(file, typeRef);
 
-
         calculateMinTime(response.getTickets());
-
         System.out.println(calculateAvgBetweenMedian(response.getTickets()));
     }
 
     //Минимальное время полета между городами Владивосток и Тель-Авив для каждого авиаперевозчика
-    public static void calculateMinTime(List<Ticket> tickets){
-
+    public static void calculateMinTime(List<Ticket> tickets) {
         tickets.stream()
                 .filter(ticket -> Objects.equals(ticket.getOrigin(), "VVO") && Objects.equals(ticket.getDestination(), "TLV"))
                 .collect(Collectors.groupingBy(Ticket::getCarrier,
                         Collectors.mapping(Ticket::getDurationFlight,
                                 Collectors.toList())))
-                        .forEach((key, value) -> {System.out.println(
-                                "carrier: " + key + " min time: " + value.stream()
-                                        .sorted()
-                                        .toList()
-                                        .get(0));});
+                .forEach((key, value) -> {
+                    System.out.println(
+                            "carrier: " + key + " min time: " + value.stream()
+                                    .sorted()
+                                    .toList()
+                                    .getFirst());
+                });
     }
 
     //Разница между средней ценой и медианой для полета между городами  Владивосток и Тель-Авив
-    public static String  calculateAvgBetweenMedian(List<Ticket> tickets){
+    public static Double calculateAvgBetweenMedian(List<Ticket> tickets) {
         Stream<Ticket> ticketStream = tickets.stream();
         List<Integer> listPrice =
                 ticketStream
-                .filter(ticket -> Objects.equals(ticket.getOrigin(), "VVO") && Objects.equals(ticket.getDestination(), "TLV"))
-                .map(Ticket::getPrice)
-                .sorted()
-                .toList();
+                        .filter(ticket -> Objects.equals(ticket.getOrigin(), "VVO") && Objects.equals(ticket.getDestination(), "TLV"))
+                        .map(Ticket::getPrice)
+                        .sorted()
+                        .toList();
 
         double avg = listPrice
                 .stream()
@@ -69,10 +69,10 @@ public class App {
                 .summaryStatistics()
                 .getAverage();
 
-        double median = listPrice.get(listPrice.size()/2);
-        if (listPrice.size()%2 == 0)
-            median = (median + listPrice.get(listPrice.size()/2-1)) / 2;
+        double median = listPrice.get(listPrice.size() / 2);
+        if (listPrice.size() % 2 == 0)
+            median = (median + listPrice.get(listPrice.size() / 2 - 1)) / 2;
 
-        return Double.toString(Math.abs(avg-median));
+        return Math.abs(avg - median);
     }
 }
